# ICTA_2026

./: .gitignore  README.md  TransValDep_Design.md  download_data.py  implementation.patch  pyproject.toml  requirements.txt
configs/: corpora.yaml  default.yaml  prompt2qtype.yaml
configs/experiments/: DAIC_acoustic_opensmile.yaml  DAIC_all.yaml  DAIC_audio_text.yaml  E0_acoustic_only.yaml  E1_full_fusion.yaml  E2_corpus_adv.yaml  E4_group_dro.yaml  E5_irm.yaml  LOCO_best.yaml
data/manifests/: all.csv  segments.csv
scripts/: 00_build_manifests.py  01_extract_features.py  02_run_cv.py  03_make_report.py  04_simple_baseline.py  05_compare.py
src/: __init__.py
src/calibration/: __init__.py  calibrators.py  selective.py
src/data/: __init__.py  bag_builder.py  confounds.py  dataset.py  features.py  segmentation.py  splitter.py
src/eval/: __init__.py  confound_eval.py  metrics.py  probe.py  stats.py
src/losses/: __init__.py  consistency.py  group_dro.py  irm.py
src/models/: __init__.py  adversary.py  encoders.py  grl.py  heads.py  transval_net.py
src/train/: __init__.py  cv_runner.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  registry.py  seed.py
tests/: conftest.py  test_calibrator.py  test_grl.py  test_model_forward.py  test_splitter.py
