[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transval-dep"
version = "0.1.0"
description = "Transferable-Validity Depression detection: a multi-corpus, confound-controlled, calibration-first benchmark."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "torch>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
features = ["transformers>=4.30", "torchaudio>=2.0", "silero-vad>=5.0", "pyarrow>=12.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
